[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysaj-elekeeper"
version = "0.0.10"
description = "Python client for the SAJ Elekeeper API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Giovadroid" }
]
keywords = ["saj", "elekeeper", "solar", "photovoltaic", "home-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pycryptodome>=3.20.0",
]

[project.urls]
Homepage = "https://github.com/giovadroid/pysaj-elekeeper"
Repository = "https://github.com/giovadroid/pysaj-elekeeper"
Documentation = "https://giovadroid.github.io/pysaj-elekeeper"
Issues = "https://github.com/giovadroid/pysaj-elekeeper/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pdoc>=15.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "twine>=5.0.0",
]

[tool.hatch.build]
include = [
  "src/elekeeper/**/*.py",
  "src/elekeeper/py.typed",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "SECURITY.md",
  "examples/**/*.py",
  ".env.example",
]
exclude = [
  ".env",
  ".ai",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  "*.jsonl",
  "__pycache__",
  "dist",
  "build",
]

[tool.hatch.build.targets.wheel]
packages = ["src/elekeeper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.0.10"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "pdoc>=16.0.0",
]
